--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@
     animation: App-logo-spin infinite 20s linear;
   }
 }
-
+/* 
 .App-header {
   background-color: white;
   min-height: 100vh;
@@ -22,7 +22,7 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-}
+} */
 
 .App-link {
   color: #61dafb;
@@ -36,3 +36,16 @@
     transform: rotate(360deg);
   }
 }
+
+h2 {  
+  color: black;
+  font-size: 20px;
+  font-style:italic
+}
+
+h1 {
+  margin-top: 100px;
+  font-size: 50px; 
+  
+}
+
