--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,40 +1,37 @@
-.NavBar {    
-    background-color: brown;
-    color:white;
-    text-align: center;      
-    min-width: 100vw;    
-    padding-top: 0px;       
+*{
+    box-sizing: border-box;
+    margin:0;
+    padding: 0;
+    
 }
 
-ul li {
-    list-style-type: none;
-    display:inline-block;
-    width: 18%;    
-} 
-
-
-.backLinkA {
-    min-width: 100vw;
-    background-color: black;  
-    padding: 15px 0px 15px 0px
-}
-
-.linkA {
-    text-decoration: none;
-    color: white;      
-}
-
-.link {
-    text-decoration:none;
+li, a {
+    font-size: 20px;
     color: white;
-    font-family: 'Spectral', serif;
-    font-style: italic;
-    font-weight:bold;
-    text-align: center;     
+    font-weight: 500;
+    text-decoration: none;
+    display: inline-block;  
+    padding: 0 20px;
+  
 }
 
-h2 {
-    font-style: italic;
-    color: black;
-    font-size: 25px;
+a:hover {
+    color:rgb(21, 226, 226) 
+}
+
+.marca {
+    text-align: left;
+    max-width: 25%;
+    cursor: pointer
+   
+}
+
+.NavBar {
+    display:flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 5px 10%;
+    background-color: black;
+    min-width: 100vw;  
+   
 }
