Desafio3 Landing-ItemListContainer ready

--- a/src/components/ItemListContainer/ItemListContainer.css
+++ b/src/components/ItemListContainer/ItemListContainer.css
@@ -1,3 +1,11 @@
+
+
 .itemslistcontainer {
-    color: yellow
+    color: rgb(6, 128, 101)
+}
+
+.text {
+    color:black;
+    font-style: italic;
+    
 }
