--- a/src/components/ItemDetail/ItemDetail.css
+++ b/src/components/ItemDetail/ItemDetail.css
@@ -1,15 +1,16 @@
-.img {
+.imgID {
     max-width: 90%;    
     border-radius: 15px;
     margin-top: 25px
 }
 
 h3, p {
-    color: black;
-    font-size: 35px
+
+    font-size: 35px;
+    color: black
 }
 
-.box {
+.boxID {
     border: 3px solid rgb(0, 135, 99);
     background-color: rgba(5, 183, 136, 0.115) ;
     border-radius: 10px;
@@ -20,7 +21,7 @@ h3, p {
        
 }
 
-.botonCompra {
+.botonCompraID {
     color: white;
     padding:15px;
     font-size: 20px;
@@ -29,7 +30,7 @@ h3, p {
     margin-top: 25px
 }
 
-.detallesProd {
+.detallesID {
     margin-bottom: 45px; 
     margin-top: 25px;  
    
