Desafio6- Tercera Version, Correcciones RodrigoM- agregandoFind y Corrig ItemDetail p renderizar

--- a/src/components/ItemDetailCard/ItemDetailCard.css
+++ b/src/components/ItemDetailCard/ItemDetailCard.css
@@ -1,4 +1,4 @@
-.imgID {
+/* .imgID {
     max-width: 90%;    
     border-radius: 15px;
     margin-top: 25px
@@ -34,4 +34,4 @@ h3, p {
     margin-bottom: 45px; 
     margin-top: 25px;  
    
-}
+} */
