Desafio7 - Primera Entrega Proyecto Final - Base del desafío Lista

--- a/src/App.css
+++ b/src/App.css
@@ -12,8 +12,8 @@
     animation: App-logo-spin infinite 20s linear;
   }
 }
-/* 
-.App-header {
+
+/* .App-header {
   background-color: white;
   min-height: 100vh;
   display: flex;
@@ -21,7 +21,7 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: red;
 } */
 
 .App-link {
