--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -7,7 +7,7 @@
 
 li, a {
     font-size: 20px;
-    color: white;
+    color: white;    
     font-weight: 500;
     text-decoration: none;
     display: inline-block;  
@@ -16,12 +16,13 @@ li, a {
 }
 
 a:hover {
-    color:rgb(21, 226, 226) 
+    color:rgb(21, 226, 226);    
 }
+
 
 .marca {
     text-align: left;
-    max-width: 25%;
+    max-width: 65%;
     cursor: pointer
    
 }
@@ -38,4 +39,13 @@ a:hover {
 
 .title { 
     color: yellow
+}
+
+.botonActive {
+    color: white;
+    padding:15px;
+    font-size: 20px;
+    border-radius: 8px;
+    background-color: rgb(0, 97, 65);
+    margin-top: 0px
 }
