--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -29,7 +29,7 @@ a:hover {
 
 .NavBar {
     display:flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     padding: 5px 10%;
     background-color: black;
