--- a/src/components/CartWidget/CartWidget.css
+++ b/src/components/CartWidget/CartWidget.css
@@ -1,8 +1,9 @@
 .carritoImg {       
     background-color: rgb(21, 226, 226)  ;
-    border-radius: 50%;   
-    padding: 10px; 
-    max-width: 50%;    
+    border-radius: 0%;   
+    padding: 0px; 
+    max-width: 100%;  
+    display: block;  
 }
 
 .carritoMsg {
