--- a/src/components/CartWidget/CartWidget.css
+++ b/src/components/CartWidget/CartWidget.css
@@ -1,13 +1,21 @@
+.carritoCount {
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;       
+} 
+
 .carritoImg {       
-    background-color: rgb(21, 226, 226)  ;
-    border-radius: 0%;   
-    padding: 0px; 
-    max-width: 100%;  
-    display: block;  
+    background-color: rgb(172, 255, 209);   
+    border-radius: 8px;   
+    padding: 4px 8px 4px 4px;     
+    margin-right:5px;
+    max-width: 60px;    
+    justify-content: end;         
 }
 
 .carritoMsg {
     color: white;
-    font-weight: 700;
+    font-size: 30px;
+    font-weight: 700;  
 }
 
