--- a/src/App.css
+++ b/src/App.css
@@ -27,19 +27,15 @@
   }
 }
 
-h2 {  
-  color: black;
-  font-size: 20px;
-  font-style:italic
-}
+p {  
+  color: black; 
+} 
 
 h1 {
-  margin-top: 100px;
-  font-size: 50px; 
-  
-}
-
-
-li {
   color: black
 }
+
+h2 {
+  color: black
+}
+
