--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -44,6 +44,17 @@
     color: black
 }
 
+.botonUpdateColl {
+    background-color: rgb(253, 75, 75);    
+    border-radius: 8px;
+    padding: 20px;
+    margin-top: 20px;
+    margin-bottom: 40px;
+    font-size: 20px;    
+    cursor: pointer;
+    color: black
+}
+
 .total {
     background-color: rgb(1, 61, 31);
     border-radius: 5px;      
