--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -22,7 +22,7 @@
     color: white
 }
 
-.botonVolver {
+.botonRemove {
     background-color: rgb(0, 207, 152);     
     border-radius: 8px;
     padding: 20px;
@@ -35,16 +35,45 @@
 
 .botonAceptar {
     background-color: gold;    
-    border-radius: 8px;
+    border-radius: 8px;    
     padding: 20px;
-    margin-top: 20px;
-    margin-bottom: 40px;
+    margin: 20px 8px 40px 15px;    
     font-size: 20px;    
     cursor: pointer;
-    color: black
+    color: black;
+    width: 250px;
 }
 
-.botonUpdateColl {
+.botonVolver {
+    background-color: gold;    
+    border-radius: 8px;    
+    padding: 20px;
+    margin: 20px 8px 40px 15px;    
+    font-size: 20px;    
+    cursor: pointer;
+    color: black;
+    width: 250px;
+}
+
+.botonVaciar{
+    background-color: gold;    
+    border-radius: 8px;
+    border: none;
+    padding: 20px;    
+    margin: 20px 15px 40px 0px;    
+    font-size: 20px;    
+    cursor: pointer;
+    color: black;
+    font-weight: 550;
+    width: 250px;
+}
+.botonesFinales{
+    display: flex;
+    justify-content: center;
+
+}
+
+/* .botonUpdateColl {
     background-color: rgb(253, 75, 75);    
     border-radius: 8px;
     padding: 20px;
@@ -53,19 +82,25 @@
     font-size: 20px;    
     cursor: pointer;
     color: black
-}
+} */
 
-.total {
+.totalContainer {
     background-color: rgb(1, 61, 31);
     border-radius: 5px;      
     padding: 35px
 }
 
-h2 {
-    color: black;
+.total {
+    color: white;
+    font-size: 40px;
+
+}
+
+/* h2 {
+    color: red;
     font-size: 25px
      
-}
+} */
 
 
 .ticketContent{
@@ -81,10 +116,11 @@ p {
     font-style: italic;
 } */
 
-h1 {
-    font-size: 60px;
-    color: black;
-    margin-top: 80px
+.grcs {
+    font-size: 80px;
+    color: rgb(206, 33, 206);
+    margin-top: 80px;
+    margin-bottom: 80px;
 }
 /* 
 title {
