--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -127,3 +127,11 @@ title {
     color: white
 } */
 
+.carritoVacio {
+    background-color: blanchedalmond;
+    margin-top: 200px;
+    width: 60%;
+    padding: 25px;
+    border-radius: 10px;
+    display: inline-block;
+}
