--- a/src/components/ItemDetail/ItemDetail.css
+++ b/src/components/ItemDetail/ItemDetail.css
@@ -59,3 +59,16 @@
     color: black;
     text-transform: uppercase;
 } */
+
+.reservaPrevia {
+    color: white;
+    font-size: 24px;
+
+}
+
+.botonCambioReserva {
+    width: 55px;
+    height: 55px;
+    border-radius:50%;
+    font-size: 35px;
+}
