--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -1,29 +1,46 @@
 
 
+.msjCierre {
+    font-size: 30px;
+    color: black;    
+    margin-top: 25px;
+    margin-bottom: 30px;
+}
+
 .CartTicket {
     display: inline-block;
-    background-color: rgb(227, 255, 236);
-    max-width: 70%;    
+    /* background-color: rgb(227, 255, 236); */
+    background-color: rgba(5, 183, 136, 0.115);      
+    /* max-width: 85%; */
+    margin-bottom: 40px; 
     border-radius: 8px; 
     font-size: 35px;         
+    border-top: solid 7px gold;
+    border-bottom: solid 7px gold
 }
+
+/* .headerTitle {
+    font-size: 20px;
+    margin-top:15px;
+    padding: 2px;
+    color: black
+} */
 
 .header {
-    background-color: rgb(1, 61, 31);
+    background-color: #2b5742;
     color: white;
-    margin: 30px;
-    padding: 30px;
+    font-size: 18px;
+    font-style: italic;
+    margin: 8px 15px 30px 15px;
+    padding: 20px;
     border-radius: 8px;
+    line-height: 1.7;  
 }
 
-.headerTitle {
-    font-size: 30px;
-    padding: 2px;
-    color: white
-}
 
 .botonRemove {
-    background-color: rgb(0, 207, 152);     
+    background-color: rgb(0, 207, 152);  
+    border: none;   
     border-radius: 8px;
     padding: 20px;
     margin-top: 20px;
@@ -33,45 +50,97 @@
     
 }
 
-.botonAceptar {
-    background-color: gold;    
-    border-radius: 8px;    
-    padding: 20px;
-    margin: 20px 8px 40px 15px;    
-    font-size: 20px;    
-    cursor: pointer;
-    color: black;
-    width: 250px;
-}
-
-.botonVolver {
-    background-color: gold;    
-    border-radius: 8px;    
-    padding: 20px;
-    margin: 20px 8px 40px 15px;    
-    font-size: 20px;    
-    cursor: pointer;
-    color: black;
-    width: 250px;
-}
-
-.botonVaciar{
-    background-color: gold;    
-    border-radius: 8px;
-    border: none;
-    padding: 20px;    
-    margin: 20px 15px 40px 0px;    
-    font-size: 20px;    
-    cursor: pointer;
-    color: black;
-    font-weight: 550;
-    width: 250px;
-}
 .botonesFinales{
     display: flex;
     justify-content: center;
-
 }
+
+.botonAceptar {
+    background-color: gold; 
+    font-size: 20px;    
+    cursor: pointer;
+    color: black;   
+    border: none;
+    border-radius: 8px; 
+    font-family: Arial;  
+    width: 250px;
+    height: 50px;
+    padding: 15px;
+    margin: 20px 15px 10px 15px;  
+    font-weight: 550; 
+}
+
+
+.botonVaciar{
+    background-color: gold;    
+    font-size: 20px;    
+    cursor: pointer;
+    color: black;
+    border: none;
+    border-radius: 8px;
+    font-family: Arial;
+    width: 250px;
+    height: 50px;
+    /* padding: 20px;     */
+    margin: 20px 15px 0px 15px;    
+    font-weight: 550; 
+}
+
+.totalContainer {
+    background-color: #2b5742;
+    border-radius: 5px;      
+    padding: 15px;
+    margin: 15px 15px 15px 15px; 
+}
+
+
+.total {
+    color: white;
+    font-size: 20px;
+    
+}
+
+
+.ticketContent{
+    font-size: 20px;
+    border-bottom: dotted 4px black;
+    margin-top: 35px;
+    
+}
+
+
+.carritoVacio {
+    background-color: blanchedalmond;
+    margin-top: 150px;
+    width: 60%;
+    padding: 25px;
+    border-radius: 10px;
+    display: inline-block;
+}
+
+
+/* .header {
+    background-color: #2b5742;
+    color: white;
+    font-size: 20px;
+    font-style: italic;
+    margin: 30px 15px 30px 15px;
+    padding: 20px;
+    border-radius: 8px;
+    line-height: 1.7;  
+} */
+
+/* .botonVolver {
+    background-color: gold;    
+    border-radius: 8px;    
+    padding: 20px;
+    margin: 20px 8px 40px 15px;    
+    font-size: 20px;    
+    cursor: pointer;
+    color: black;
+    width: 250px;
+} */
+
 
 /* .botonUpdateColl {
     background-color: rgb(253, 75, 75);    
@@ -84,31 +153,12 @@
     color: black
 } */
 
-.totalContainer {
-    background-color: rgb(1, 61, 31);
-    border-radius: 5px;      
-    padding: 35px
-}
-
-.total {
-    color: white;
-    font-size: 40px;
-
-}
-
 /* h2 {
     color: red;
     font-size: 25px
      
 } */
 
-
-.ticketContent{
-    font-size: 20px;
-    border-bottom: dotted 4px black;
-    margin-top: 35px;
-   
-}
 /* 
 p {
     color: black;
@@ -116,22 +166,7 @@ p {
     font-style: italic;
 } */
 
-.grcs {
-    font-size: 80px;
-    color: rgb(206, 33, 206);
-    margin-top: 80px;
-    margin-bottom: 80px;
-}
 /* 
 title {
     color: white
 } */
-
-.carritoVacio {
-    background-color: blanchedalmond;
-    margin-top: 200px;
-    width: 60%;
-    padding: 25px;
-    border-radius: 10px;
-    display: inline-block;
-}
