--- a/src/components/Item/Item.css
+++ b/src/components/Item/Item.css
@@ -1,7 +1,7 @@
 .img {
-    max-width: 90%;    
-    border-radius: 15px;
-    margin-top: 25px
+    max-width: 85%;    
+    border-radius: 10px;
+    margin-top: 22px
 }
 
 /* h1, h2, h3, p {
@@ -10,20 +10,24 @@
 } */
 
 .box {
-    border: 1px solid rgba(5, 183, 136, 0);
+    /* border: 1px solid rgba(5, 183, 136, 0); */
     background-color: rgba(5, 183, 136, 0.115);   
+    /* background-color: rgb(227, 255, 236);    */
     border-radius: 10px;
-    max-width: 30%;
+    border-top: 5px solid gold;
+    border-bottom: 5px solid gold;
+    max-width: 23%;
     display: inline-block;
     max-height: 60%;
-    margin: 25px 10px;
+    margin: 0px 22px 25px 0px;
     /* color: black        */
 }
 
 .botonCompra {
     color: white;
-    padding:15px;
-    font-size: 20px;
+    text-transform: capitalize;
+    padding: 15px;
+    font-size: 19px;
     border-radius: 8px;
     background-color: rgb(0, 97, 65);
     margin-top: 25px
@@ -34,22 +38,24 @@
 } */
 
 .detallesProd {
-    margin-bottom: 45px; 
-    margin-top: 25px;  
-    
+    margin-bottom: 40px; 
+    margin-top:20px;      
 }
 /* 
 p {
     color: black
 } */
-
 .tour {
     color:  black;
-    font-size: 20px;
-   
+    font-size: 20px;   
+}
+
+.category {
+    text-transform: capitalize;
+    font-style: italic;
 }
 
 .precio {
-    color: black;
-    font-size: 20px;
+    /* color: black; */
+    font-size: 18px;
 }
