--- a/src/components/Notification/Notification.css
+++ b/src/components/Notification/Notification.css
@@ -1,8 +1,43 @@
 .Success {
-    background-color: green
+    background-color: green;  
+    padding: 15px;
+    margin-right: 35%;
+    /* margin: 100px 385px 0px 0px;  */
+    /* width: auto;
+    height: auto; */
+    display: inline-flex;
+    align-items: center;
+    justify-content: center; 
+    /* min-height: 50%;
+    min-width: 50%; */
+    position:absolute;
+    top: 40%;
+    min-height: 10%
+    
+    /* max-width: 100vw;
+    max-height: 100vh;  */
+    
 }
 .Error {
-    background-color: red
+    background-color: red;
+    padding: 15px;
+    margin-right: 35%;
+    /* margin: 100px 385px 0px 0px;  */
+    /* width: auto;
+    height: auto; */
+    display: inline-flex;
+    align-items: center;
+    justify-content: center; 
+    /* min-height: 50%;
+    min-width: 50%; */
+    position:absolute;
+    top: 40%;
+    min-height: 10%
+    
+    /* max-width: 100vw;
+    max-height: 100vh;  */
+   
+    
 }
 
 .Mensaje {
