--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -64,7 +64,7 @@
     border-radius: 8px; 
     font-family: Arial;  
     width: 250px;
-    height: 50px;
+    height: 80px;
     padding: 15px;
     margin: 20px 15px 10px 15px;  
     font-weight: 550; 
@@ -115,6 +115,8 @@
     width: 60%;
     padding: 25px;
     border-radius: 10px;
+    border-top: solid 5px gold;
+    border-bottom: solid 5px gold;
     display: inline-block;
 }
 
