--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -64,7 +64,7 @@
     border-radius: 8px; 
     font-family: Arial;  
     width: 250px;
-    height: 80px;
+    height: 50px;
     padding: 15px;
     margin: 20px 15px 10px 15px;  
     font-weight: 550; 
@@ -85,6 +85,7 @@
     margin: 20px 15px 0px 15px;    
     font-weight: 550; 
 }
+
 
 .totalContainer {
     background-color: #2b5742;
@@ -118,6 +119,21 @@
     border-top: solid 5px gold;
     border-bottom: solid 5px gold;
     display: inline-block;
+}
+
+.botonAceptar {
+    background-color: gold; 
+    font-size: 20px;    
+    cursor: pointer;
+    color: black;   
+    border: none;
+    border-radius: 8px; 
+    font-family: Arial;  
+    width: 250px;
+    height: 50px;
+    padding: 15px;
+    margin: 20px 15px 10px 15px;  
+    font-weight: 550; 
 }
 
 
