--- a/src/components/ItemCount/ItemCount.css
+++ b/src/components/ItemCount/ItemCount.css
@@ -22,10 +22,16 @@
     background-color: white;
     border-radius: 5px; 
     border:2px dotted #2b5742;  
-    margin: 50px 30px 50px 30px;
+    margin: 50px 30px 0px 30px;
     padding:10px;
     color: black;
     font-size: 25px
+}
+
+.maxStock {
+    font-size: 13px;
+    font-style: italic;
+    margin: 0px 40px 10px 40px;
 }
 
 .buttonsCountContainer{
